tests/rosetta/out/Swift/99-bottles-of-beer-2.error
run error: exit status 1
/tmp/TestMochiToSwift99-bottles-of-beer-23224109631/001/main.swift:3:27: error: cannot assign value of type '[Any]' to type '[String]'
  1 | // Generated by Mochi compiler v0.10.26 on 2025-07-16T09:54:22Z
  2 | func fields(_ s: String) -> [String] {
  3 |     var words: [String] = [Any]()
    |                           |- error: cannot assign value of type '[Any]' to type '[String]'
    |                           `- note: arguments to generic parameter 'Element' ('Any' and 'String') are expected to be equal
  4 |     var cur = ""
  5 |     var i = 0

/tmp/TestMochiToSwift99-bottles-of-beer-23224109631/001/main.swift:37:9: warning: variable 'small' was never mutated; consider changing to 'let' constant
 35 | }
 36 | func numberName(_ n: Int) -> String {
 37 |     var small = ["no", "one", "two", "three", "four", "five", "six", "seven", "eight", "nine", "ten", "eleven", "twelve", "thirteen", "fourteen", "fifteen", "sixteen", "seventeen", "eighteen", "nineteen"]
    |         `- warning: variable 'small' was never mutated; consider changing to 'let' constant
 38 |     var tens = ["ones", "ten", "twenty", "thirty", "forty", "fifty", "sixty", "seventy", "eighty", "ninety"]
 39 |     if n < 0 {

/tmp/TestMochiToSwift99-bottles-of-beer-23224109631/001/main.swift:38:9: warning: variable 'tens' was never mutated; consider changing to 'let' constant
 36 | func numberName(_ n: Int) -> String {
 37 |     var small = ["no", "one", "two", "three", "four", "five", "six", "seven", "eight", "nine", "ten", "eleven", "twelve", "thirteen", "fourteen", "fifteen", "sixteen", "seventeen", "eighteen", "nineteen"]
 38 |     var tens = ["ones", "ten", "twenty", "thirty", "forty", "fifty", "sixty", "seventy", "eighty", "ninety"]
    |         `- warning: variable 'tens' was never mutated; consider changing to 'let' constant
 39 |     if n < 0 {
 40 |         return ""

/tmp/TestMochiToSwift99-bottles-of-beer-23224109631/001/main.swift:47:13: warning: variable 's' was never mutated; consider changing to 'let' constant
 45 |     if n < 100 {
 46 |         var t = tens[Int((n / 10))]
 47 |         var s = n % 10
    |             `- warning: variable 's' was never mutated; consider changing to 'let' constant
 48 |         if s > 0 {
 49 |             t = t + " " + small[s]

/tmp/TestMochiToSwift99-bottles-of-beer-23224109631/001/main.swift:61:10: error: cannot assign through subscript: 'w' is a 'let' constant
 57 |         return s
 58 |     }
 59 |     let w = fields(s)
    |     `- note: change 'let' to 'var' to make it mutable
 60 |     if w.count > 0 {
 61 |         w[0] = w[0] + "s"
    |          `- error: cannot assign through subscript: 'w' is a 'let' constant
 62 |     }
 63 |     return join(w, " ")

/tmp/TestMochiToSwift99-bottles-of-beer-23224109631/001/main.swift:73:23: error: cannot assign value of type '[Any]' to type '[String]'
 71 |         return p
 72 |     }
 73 |     var a: [String] = [Any]()
    |                       |- error: cannot assign value of type '[Any]' to type '[String]'
    |                       `- note: arguments to generic parameter 'Element' ('Any' and 'String') are expected to be equal
 74 |     var i = 1
 75 |     while i < p.count - 1 {
